--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
         </div>
         <div class="footer_block">
           <h4>Contact Us</h4>
-          <p>Email: govind.18jics024@jietjodhpur.ac.in</p>
-          <p>Phone: +91 768-897-4744</p>
+          <p>Email: tejbari5@gmail.com</p>
+          <p>Phone: +91 7507261355</p>
         </div>
       </div>
       <div class="custom_footer_2">
