--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F1-Contest3</title>
-    <link rel="icon" href="/assets/title.png" type="image/icon type">
+    <link rel="icon" href="/Images/title.png" type="image/icon type">
     <!-- css -->
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <base href="./assets/">
+    <base href="./Images/">
 </head>
 
 <body>
