--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>F1-Contest3</title>
+    <title>Frontend-1-Contest-3-July</title>
     <link rel="icon" href="/Images/title.png" type="image/icon type">
     <!-- css -->
     <link rel="stylesheet" href="style.css">
